Changed the color scheme of the lines in the dygraph to be black and red on T1 and T2, respectively. Fixed bug where the user would enter a file name or heading with a space in it, and that would break the script inputs in the temperature server. Now spaces are automatically replaced with underscores.

--- a/html/css/thermoSquidClient.css
+++ b/html/css/thermoSquidClient.css
@@ -6,7 +6,7 @@ body {
 
 header {
   display: flex;
-  background: linear-gradient(to right, white, #403c3c);
+  background: linear-gradient(to right, white, darkred);
   margin: 0px 0px 5px 0px;
   border-radius: 5px;
   justify-content: space-between;
@@ -128,7 +128,7 @@ h4 {
 .controlBar {
   display: flex;
   /*background: rgb(200, 200, 200);*/
-  background: linear-gradient(to left, white, #403c3c);
+  background: linear-gradient(to left, red, darkred);
   /*! margin: 0px; */
   border-radius: 5px;
   justify-content: flex-start;
